resolution blur poc && unskippable ad

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -6,6 +6,7 @@
 
   <body>
     <p>You skipped <span id="skip-count"> 0 </span> ads </p>
+    <p>You gain <span id="total-skip-time"> 0 </span></p>
     <p>Thanks to YouSkip</p>
     <script src="popup.js"></script>
   </body>
