bg advanced work

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -5,12 +5,15 @@
   </head>
 
   <body>
-    <p>You skipped <span id="skip-count"> 0 </span> ads</p>
+    <p>You skipped <span id="total-skip-count"> 0 </span> ads</p>
     <p>You gain <span id="total-skip-time"> 0 </span></p>
+    <p>Ad skippable : <span id="month-skippable-count"> 0 </span></p>
+    <p>Ad unskippable :<span id="month-unskippable-count"> 0 </span></p>
+
     <label for="storage-version"> Advanced Version</label>
     <input id="storage-version" type="checkbox" name="storage-version" />
     <label for="storage-version"> Version Lite</label>
-    <p> Changing your version reset your data</p>
+    <p>Changing your version reset your data</p>
     <p>Thanks to YouSkip</p>
     <script src="popup.js"></script>
   </body>
