--- a/popup/popup.html
+++ b/popup/popup.html
@@ -5,10 +5,13 @@
   </head>
 
   <body>
-    <p>You skipped <span id="total-skip-count"> 0 </span> ads</p>
-    <p>You gain <span id="total-skip-time"> 0 </span></p>
+    <p>Total skips <span id="total-skip-count"> 0 </span> ads</p>
+    <p>Total time gained <span id="total-skip-time"> 0s </span></p>
+    <p>This month</p>
     <p>Ad skippable : <span id="month-skippable-count"> 0 </span></p>
     <p>Ad unskippable :<span id="month-unskippable-count"> 0 </span></p>
+    <p>Time gained : <span id="month-skip-time"> 0s </span></p>
+    <p>Average skip time : <span id="month-average-time"> 0s </span></p>
 
     <label for="storage-version"> Advanced Version</label>
     <input id="storage-version" type="checkbox" name="storage-version" />
