--- a/popup/popup.html
+++ b/popup/popup.html
@@ -17,7 +17,7 @@
       </div>
 
       <div id="version">
-        <span class="version-index">v0.1.3</span>
+        <span class="version-index">v0.1.4</span>
         <a class="version-link" href="https://github.com/Mr-Fougere/youSkip">
           <img class="github-icon" src="../assets/images/github.png" />
         </a>
@@ -65,7 +65,7 @@
       </div>
       <div class="section">
         <div class="section-title">
-          <span class="section-name">Month Recap</span>
+          <span class="section-name">Month Skips</span>
           <div class="section-divider"></div>
         </div>
         <div class="section-content">
@@ -77,7 +77,7 @@
             <span class="section-content-item-value" id="month-skippable-count"
               >0</span
             >
-            <span class="section-content-item-name">Skippable Ads Skips</span>
+            <span class="section-content-item-name">Skippable Ads</span>
           </div>
           <div class="section-content-item">
             <img
@@ -89,7 +89,7 @@
               id="month-unskippable-count"
               >0</span
             >
-            <span class="section-content-item-name">Unskippable Ads Skips</span>
+            <span class="section-content-item-name">Unskippable Ads</span>
           </div>
         </div>
       </div>
