remove lite version && refacto backgrohnd script

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -24,6 +24,8 @@
       </div>
     </header>
 
+    <p id="error-flash"></p>
+
     <div class="sections">
       <div class="section">
         <div class="section-title">
@@ -36,7 +38,7 @@
               class="section-content-item-icon"
               src="../assets/images/skips.png"
             />
-            <span class="section-content-item-value" id="total-skips-count"
+            <span class="section-content-item-value" id="total-skip-count"
               >0</span
             >
             <span class="section-content-item-name">Skipped Ads</span>
