reverse bool switch && display condition

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -27,9 +27,9 @@
     <p id="error-flash"></p>
 
     <div class="sections">
-      <div class="section">
+      <div class="section ads">
         <div class="section-title">
-          <span class="section-name">Full Recap</span>
+          <span class="section-name">Skips Recap</span>
           <div class="section-divider"></div>
         </div>
         <div class="section-content">
@@ -65,7 +65,7 @@
           </div>
         </div>
       </div>
-      <div class="section">
+      <div class="section ads">
         <div class="section-title">
           <span class="section-name">Month Skips</span>
           <div class="section-divider"></div>
@@ -103,7 +103,7 @@
         <div class="section-content">
           <div class="section-content-action">
             <div class="bool-switch-block">
-              <input class="bool-switch__checkbox"id="ads-skipper" type="checkbox" name="ads-skipper" />
+              <input class="bool-switch__checkbox" id="ads-skipper" type="checkbox" name="ads-skipper" />
               <label class="bool-switch__label" for="ads-skipper"></label>
             </div>
             <label class="section-content-action-name" for="ads-skipper"> Ads Skipper</label>
