--- a/popup/popup.html
+++ b/popup/popup.html
@@ -17,7 +17,7 @@
       </div>
 
       <div id="version">
-        <span class="version-index">v0.2-beta</span>
+        <span class="version-index" id="version-name" ></span>
         <a class="version-link" href="https://github.com/Mr-Fougere/youSkip">
           <img class="github-icon" src="../assets/images/github.png" />
         </a>
